# trampi

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: ci.yml
easybuild/: MPICH-5.0.1-GCC-14.3.0-mpif.eb  MPICH-5.0.1-GCC-14.3.0.eb  mpif.patch  pointer_cast.patch  trampi-devel-GCC-14.3.0.eb
generator/: emitter.py  main.py  mpi_parser.py  pyproject.toml  verify.py  verify_output.py
launcher_templates/: mpiexec.in  mpirun.in
mpi_abi_trampoline/: emitter.py  main.py  mpi_parser.py  tokenizer.py  verify.py  verify_output.py
test_codes/: mildly_complex.c  mpi_hello_world.f90
trampi/: __init__.py  __main__.py  emitter.py  main.py  mpi_parser.py  verify_output.py
