[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trampi"
version = "0.1.0"
description = "Generator for MPI ABI trampoline libraries"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
trampi = "trampi.__main__:main"

[tool.setuptools.packages.find]
include = ["trampi*"]
