[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mpi-abi-generator"
version = "0.1.0"
description = "MPI ABI trampoline generator"
requires-python = ">=3.9"

dependencies = []

[project.scripts]
mpi-abi-generator = "mpi-abi-generator = "mpi_abi_generator.main:main""
